kubernetes/ing/ingress-mixed-hard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mixed-ingress
spec:
