kubernetes/ing/ingress-single-5.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs-ingress
spec:
